force-app/main/default/objects/Account/fields/Annual_Revenue_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue_Bucket__c</fullName>
    <label>Annual Revenue Bucket</label>
    <length>100</length>
    <type>Text</type>
</CustomField>