force-app/main/default/objects/Account/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <label>Classification</label>
    <length>100</length>
    <type>Text</type>
</CustomField>