force-app/main/default/objects/Account/fields/Customer_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Customer_Revenue__c</fullName>
    <label>Customer Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>