force-app/main/default/objects/Account/fields/Customer_Tenure__c.field-meta.xml
<CustomField>
    <fullName>Customer_Tenure__c</fullName>
    <label>Customer Tenure</label>
    <length>100</length>
    <type>Text</type>
</CustomField>