force-app/main/default/objects/Account/fields/Days_Since_Last_Interaction__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Interaction__c</fullName>
    <label>Days Since Last Interaction</label>
    <length>100</length>
    <type>Text</type>
</CustomField>