force-app/main/default/objects/Account/fields/Employee_Size_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Employee_Size_Bucket__c</fullName>
    <label>Employee Size Bucket</label>
    <length>250</length>
    <type>Text</type>
</CustomField>