force-app/main/default/objects/Account/fields/Number_of_Products__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Products__c</fullName>
    <label>Number of Products</label>
    <length>100</length>
    <type>Text</type>
</CustomField>