force-app/main/default/objects/Account/fields/Premium_Customer__c.field-meta.xml
<CustomField>
    <fullName>Premium_Customer__c</fullName>
    <label>Premium Customer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>